<resources>
    <!-- Audio Exts-->
    <string name="app_name">Musical App</string>
    <string name="mp3">.mp3</string>
    <string name="ogg">.ogg</string>
    <string name="_3gp">.3gp</string>
    <string name="aa">.aa</string>
    <string name="aac">.aac</string>
    <string name="aax">.aax</string>
    <string name="act">.act</string>
    <string name="aiff">.aiff</string>
    <string name="amr">.amr</string>
    <string name="ape">.ape</string>
    <string name="au">.au</string>
    <string name="awb">.awb</string>
    <string name="dct">.dct</string>
    <string name="dss">.dss</string>
    <string name="dvf">.dvf</string>
    <string name="flac">.flac</string>
    <string name="gsm">.gsm</string>
    <string name="iklax">.iklax</string>
    <string name="ivs">.ivs</string>
    <string name="m4a">.m4a</string>
    <string name="m4b">.m4b</string>
    <string name="m4p">.m4p</string>
    <string name="mmf">.mmf</string>
    <string name="mpc">.mpc</string>
    <string name="msv">.msv</string>
    <string name="oga">.oga</string>
    <string name="mogg">.mogg</string>
    <string name="ra">.ra</string>
    <string name="rm">.rm</string>
    <string name="raw">.raw</string>
    <string name="sln">.sln</string>
    <string name="tta">.tta</string>
    <string name="vox">.vox</string>
    <string name="wav">.wav</string>
    <string name="wma">.wma</string>
    <string name="wv">.wv</string>
    <string name="webm">.webm</string>
    <string name="_8svx">.8svx</string>

    <!--Strings used for app-->
    <string name="podcasts_title">Podcasts</string>
    <string name="music_title">Music</string>
    <string name="settings_title">Settings</string>
    <string name="audio_app_title">Krokken\'s Audio App</string>
    <string name="permission_required_dialog_title">Permission Required</string>
    <string name="permission_required_dialog_text">This is required to access your audio files for the player</string>
    <string name="permission_required_positive_button">Accept</string>
    <string name="permission_required_negative_button">Cancel</string>
    <string name="another_option">Another option</string>
    <string name="continuous_play">Continuous Play</string>
    <string name="random_play">Random Play</string>
    <string name="settings">Settings</string>
    <string name="currently_playing">Currently Playing</string>
    <string name="playlists">Playlists</string>
    <string name="podcasts">Podcasts</string>
    <string name="music">Music</string>
    <string name="url_chart"><![CDATA[https://play.google.com/store/music/artist/Top_Hit_Music_Charts?id=Abo3ey3the7654omtq3n7tcd7oy&hl=en_US]]></string>
    <string name="url_trending"><![CDATA[https://trends.google.com/trends/topcharts#vm=trendingchart&cid=musicians&geo=US&date=201803&cat=]]></string>
    <string name="url_music_store">https://play.google.com/store/music?hl=en_US</string>
    <string name="currently_playing_title">Currently Playing</string>
    <string name="playlist_title">Playlists</string>

    <!-- Strings for app description-->
    <string name="options_blah_blah_text">This page would have all of the options that can be changed by a user so the app is better tailored to their needs and wants</string>
    <string name="currently_playing_purchase_text">This could have a link to store to purchase other songs by the artist</string>
    <string name="currently_playing_song_title">Title of currently playing song</string>
    <string name="currently_playing_name_of_artist_text">Name of the artist for currently playing song</string>
    <string name="currently_playing_song_duration_text">This would display song duration</string>
    <string name="currently_playing_song_lyrics_link_text">This could be a link that would google the lyrics of the current song</string>
    <string name="currently_playing_description_text">This area would have the buttons to interact with the song, pause/play, stop, etc</string>
    <string name="playlist_description_text">This could generate a listview that displays all the playlists created by the user and saved to the device as well as giving an option to add more</string>
</resources>
